[tool.poetry]
name = "python-prakashravip1"
version = "1.0.3"
description = "Common Python Utility and Client Tools"
authors = ["ravipnsit <prakashravip1@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
delta-spark = "1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
